# EDITH

./: .gitignore  Cargo.toml  README.md  USAGE.md  build.ps1  chat_cli.py  config.json  config.toml  custom_data.jsonl  enhanced-config.toml  example.py  fix_build.ps1  install.md  llm_cli.py  llm_simple.py  llm_wrapper.py  quick_test.py  setup.py  web_ui.py
.github/workflows/: ci.yml
benches/: performance.rs
docs/: API.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: final_validation.sh  security_audit.rs
src/: backends.rs  cache.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  performance.rs  simple.rs  streaming.rs  template.rs  ui.rs
tests/: integration_test.rs
