[package]
name = "llm-wrapper"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Universal local LLM wrapper with auto-capability detection"

[[bin]]
name = "llm"
path = "src/simple.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.21"